observability/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-north-1:231056963705:certificate/5e76be6b-fbf8-474d-a62d-9e746ca23b19
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/success-codes: "200,302"
    alb.ingress.kubernetes.io/group.name: shared-alb
spec:
  ingressClassName: alb
  rules:
    - host: yassinabuelsheikh.store
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: monitoring-stack-grafana
                port:
                  number: 80

          - path: /kibana
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601

          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: monitoring-stack-kube-prom-prometheus
                port:
                  number: 9090
